--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 ZLIB DATA COMPRESSION LIBRARY
 
+Info on how to build for WASIX is there: https://github.com/wasix-org/zlib/blob/develop/Notes-WASIX.md
+
 zlib 1.3.0.1 is a general purpose data compression library.  All the code is
 thread safe.  The data format used by the zlib library is described by RFCs
 (Request for Comments) 1950 to 1952 in the files
